fix: too much space taken by label ellipses

--- a/src/utilities/Label/Label.module.scss
+++ b/src/utilities/Label/Label.module.scss
@@ -11,7 +11,7 @@
   background: greenyellow;
   margin: $margin-small;
   overflow-y: hidden;
-  text-overflow: ellipsis;
+  text-overflow: none;
   font-size: $font-tiny;
   box-shadow: 2px 3px 2px #353535, 
 }
